apps/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pred-ingress
  namespace: pred
  labels:
    app: pred-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "pred-ip"

spec:
  rules:
    - host: keycloak.nsanjula.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

    - host: pred.nsanjula.xyz
      http:
        paths:
          - path: /realms
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080

          - path: /resources
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: web-frontend
                port:
                  number: 3000

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kong
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-frontend
                port:
                  number: 3000

# paths:
#   - path: /realms
#     pathType: Prefix
#     backend:
#       service:
#         name: keycloak
#         port:
#           number: 8080

#   - path: /admin
#     pathType: Prefix
#     backend:
#       service:
#         name: keycloak
#         port:
#           number: 8080

#   - path: /resources
#     pathType: Prefix
#     backend:
#       service:
#         name: keycloak
#         port:
#           number: 8080

#   - path: /api/auth
#     pathType: Prefix
#     backend:
#       service:
#         name: web-frontend
#         port:
#           number: 3000

#   - path: /api
#     pathType: Prefix
#     backend:
#       service:
#         name: kong
#         port:
#           number: 8000

#   - path: /
#     pathType: Prefix
#     backend:
#       service:
#         name: web-frontend
#         port:
#           number: 3000
